manifests/old/001-datacenter-system.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager

---
apiVersion: v1
kind: Namespace
metadata:
  name: victoriametrics-system

---
apiVersion: v1
kind: Namespace
metadata:
  name: vector-system

---
apiVersion: v1
kind: Namespace
metadata:
  name: reflector-system

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: victoria-metrics-route
  namespace: kube-system
spec:
  entryPoints:
  - websecure
  routes:
  - match: 'Host(`victoria-metrics.docker.localhost`)'
    kind: Rule
    services:
    - kind: Service
      name: victoria-metrics-single-server
      namespace: victoriametrics-system
      port: 8428

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: victoria-logs-route
  namespace: kube-system
spec:
  entryPoints:
  - websecure
  routes:
  - match: 'Host(`victoria-logs.docker.localhost`)'
    kind: Rule
    services:
    - kind: Service
      name: victoria-logs-single-server
      namespace: victoriametrics-system
      port: 9428
